Customised result page, pop up page. Added translation, pronunciation shortcut. switch google.cn to google.com

--- a/src/content/display/style/result.styl
+++ b/src/content/display/style/result.styl
@@ -6,9 +6,9 @@
 #edge-translate-result {
     width: 100%;
     box-sizing: border-box;
-    padding: 5% 10%;
+    padding: 5% 5%;
     font-weight: normal;
-    font-size: medium;
+    // font-size: medium;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@
 
     .content-title { // 标题样式
         color: gray;
-        font-size: larger;
+        font-size: large;
     }
 
     ul, .list li {
@@ -181,12 +181,12 @@
 
         .word-type {
             color: gray;
-            margin-left: 10%;
+            margin-left: 5%;
         }
 
         .content {
             display: block;
-            margin-left: 15%;
+            margin-left: 10%;
             font-weight: light;
         }
     }
@@ -196,8 +196,11 @@
 
         .definitions-content {
             display: block;
-            margin-left: 5%;
-            font-weight: light;
+            // margin-left: 5%;
+            font-size: 14px;
+            padding: 0;
+            margin-bottom: 5px;
+            font-weight: normal;
         }
     }
 
