--- a/src/content/display/templates/result.xhtml
+++ b/src/content/display/templates/result.xhtml
@@ -101,7 +101,7 @@
 				<div class="definitions-content">  
 					<p class="word-type"><% this.definitions[i].pos + ": " %></p>
 					<span class="content">
-						<span><% chrome.i18n.getMessage("DefinitionsMeaning") %>: </span>
+						<!-- <span><% chrome.i18n.getMessage("DefinitionsMeaning") %>: </span> -->
 						<p class="definitions-content"><% this.definitions[i].meaning %></p>
 						<% if (this.definitions[i].example && this.definitions[i].example.length > 0) { %>
 							<span><% chrome.i18n.getMessage("DefinitionsExample") %>: </span>
