--- a/src/content/select/select.styl
+++ b/src/content/select/select.styl
@@ -18,13 +18,13 @@ image-size = 20px;
     z-index: 2147483647;
     box-sizing: content-box;
     overflow: hidden;
-    transition: box-shadow 200ms ease-in-out, transform 300ms ease; // set transtition effect when hover occurs
-    animation: fade-in 300ms ease-in-out; // set fade-in animation on selection icon
+    /* transition: box-shadow 200ms ease-in-out, transform 300ms ease; // set transtition effect when hover occurs */
+    /* animation: fade-in 300ms ease-in-out; // set fade-in animation on selection icon */
 
-    &&:hover {
-        box-shadow: 0px 0px 8px 3px #bbb;
-        transform: rotate(180deg);
-    }
+    /* &&:hover { */
+       /* box-shadow: 0px 0px 8px 3px #bbb; */
+       /* transform: rotate(180deg); */
+    /* } */
 
     img {
         width: image-size;
