--- a/src/content/display/style/display.styl
+++ b/src/content/display/style/display.styl
@@ -18,7 +18,7 @@
     align-items: stretch;
     border-radius: 6px;
     overflow: visible;
-    line-height: 1;
+    // line-height: 1;
 }
 
 #edge-translate-panel-head {
